fix the logic issue in generating data

--- a/syn_data.ipynb
+++ b/syn_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxDiP+XwnMg4CY+V4TJe/O",
+      "authorship_tag": "ABX9TyNpF0DMIwB1HaUfxFSYgENL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,67 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def generate_synthetic_protein_data_v3_fixed(num_acids, num_steps, pairs, seed=42):\n",
+        "    np.random.seed(seed)\n",
+        "    amino_acids = [f\"A{i}\" for i in range(1, num_acids + 1)]\n",
+        "    idx = {a: i for i, a in enumerate(amino_acids)}\n",
+        "\n",
+        "    # 初始化：全零矩阵，只随机初始化 t=0\n",
+        "    pos = np.zeros((num_steps, num_acids, 3))\n",
+        "    ang = np.zeros((num_steps, num_acids, 2))\n",
+        "\n",
+        "    pos[0] = np.random.uniform(-1, 1, size=(num_acids, 3))\n",
+        "    ang[0] = np.random.uniform(-180, 180, size=(num_acids, 2))\n",
+        "\n",
+        "    # 耦合强度系数 (防止数值发散)\n",
+        "    coupling_strength = 0.1\n",
+        "    noise_level = 0.01\n",
+        "\n",
+        "    for t in range(num_steps - 1):\n",
+        "        # step 1: 先让所有人根据自身上一时刻状态进行更新 (自我回归)\n",
+        "        # 这一步至关重要，保证了数据有“记忆性”，而不是白噪声\n",
+        "        pos[t + 1] = pos[t] + np.random.normal(0, noise_level, size=(num_acids, 3))\n",
+        "        ang[t + 1] = ang[t] + np.random.normal(0, noise_level, size=(num_acids, 2))\n",
+        "\n",
+        "        # step 2: 遍历 pairs，叠加因果效应 (使用 +=)\n",
+        "        for Ai, Aj in pairs:\n",
+        "            i = idx[Ai]\n",
+        "            j = idx[Aj]\n",
+        "\n",
+        "            # 获取源节点在 t 时刻的状态\n",
+        "            Ai_pos = pos[t, i]\n",
+        "            Ai_ang = ang[t, i]\n",
+        "\n",
+        "            # 【关键修改】直接在 t+1 已经存在的值上 *累加* 效应\n",
+        "            # 你的 v3 逻辑是 sin(source)\n",
+        "            pos[t + 1, j] += np.sin(Ai_pos) * coupling_strength\n",
+        "            ang[t + 1, j] -= Ai_ang * coupling_strength\n",
+        "\n",
+        "        # step 3: 统一处理角度归一化 (放在循环外或所有update之后)\n",
+        "        ang[t + 1] = ((ang[t + 1] + 180) % 360) - 180\n",
+        "\n",
+        "    return pos, ang, amino_acids"
+      ],
+      "metadata": {
+        "id": "D_rH2jog0RF7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Ignore below:"
+      ],
+      "metadata": {
+        "id": "D3w5cJcVRnvG"
+      }
     },
     {
       "cell_type": "code",
@@ -190,15 +251,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Ignore below:"
-      ],
-      "metadata": {
-        "id": "D3w5cJcVRnvG"
-      }
     },
     {
       "cell_type": "code",
