allow union of multiple source to target

--- a/Experiments/syn_data.ipynb
+++ b/Experiments/syn_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7/ca/JlnzZGLd9AbygDHd",
+      "authorship_tag": "ABX9TyNpF0DMIwB1HaUfxFSYgENL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,223 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def generate_synthetic_protein_data_v3_fixed(num_acids, num_steps, pairs, seed=42):\n",
+        "    np.random.seed(seed)\n",
+        "    amino_acids = [f\"A{i}\" for i in range(1, num_acids + 1)]\n",
+        "    idx = {a: i for i, a in enumerate(amino_acids)}\n",
+        "\n",
+        "    # 初始化：全零矩阵，只随机初始化 t=0\n",
+        "    pos = np.zeros((num_steps, num_acids, 3))\n",
+        "    ang = np.zeros((num_steps, num_acids, 2))\n",
+        "\n",
+        "    pos[0] = np.random.uniform(-1, 1, size=(num_acids, 3))\n",
+        "    ang[0] = np.random.uniform(-180, 180, size=(num_acids, 2))\n",
+        "\n",
+        "    # 耦合强度系数 (防止数值发散)\n",
+        "    coupling_strength = 0.1\n",
+        "    noise_level = 0.01\n",
+        "\n",
+        "    for t in range(num_steps - 1):\n",
+        "        # step 1: 先让所有人根据自身上一时刻状态进行更新 (自我回归)\n",
+        "        # 这一步至关重要，保证了数据有“记忆性”，而不是白噪声\n",
+        "        pos[t + 1] = pos[t] + np.random.normal(0, noise_level, size=(num_acids, 3))\n",
+        "        ang[t + 1] = ang[t] + np.random.normal(0, noise_level, size=(num_acids, 2))\n",
+        "\n",
+        "        # step 2: 遍历 pairs，叠加因果效应 (使用 +=)\n",
+        "        for Ai, Aj in pairs:\n",
+        "            i = idx[Ai]\n",
+        "            j = idx[Aj]\n",
+        "\n",
+        "            # 获取源节点在 t 时刻的状态\n",
+        "            Ai_pos = pos[t, i]\n",
+        "            Ai_ang = ang[t, i]\n",
+        "\n",
+        "            # 【关键修改】直接在 t+1 已经存在的值上 *累加* 效应\n",
+        "            # 你的 v3 逻辑是 sin(source)\n",
+        "            pos[t + 1, j] += np.sin(Ai_pos) * coupling_strength\n",
+        "            ang[t + 1, j] -= Ai_ang * coupling_strength\n",
+        "\n",
+        "        # step 3: 统一处理角度归一化 (放在循环外或所有update之后)\n",
+        "        ang[t + 1] = ((ang[t + 1] + 180) % 360) - 180\n",
+        "\n",
+        "    return pos, ang, amino_acids"
+      ],
+      "metadata": {
+        "id": "D_rH2jog0RF7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Ignore below:"
+      ],
+      "metadata": {
+        "id": "D3w5cJcVRnvG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def syn_data(version=\"v1\", num_acids=50, num_steps=20):\n",
+        "    np.random.seed(42)\n",
+        "\n",
+        "    amino_acids = [f\"A{i}\" for i in range(1, num_acids + 1)]\n",
+        "\n",
+        "    # dependency pairs Ai -> Aj\n",
+        "    pairs = [\n",
+        "        (\"A1\", \"A16\"),\n",
+        "        (\"A16\", \"A17\"),\n",
+        "        (\"A17\", \"A30\"),\n",
+        "        (\"A30\", \"A36\"),\n",
+        "        (\"A30\", \"A16\"),\n",
+        "        (\"A36\", \"A50\")\n",
+        "    ]\n",
+        "\n",
+        "    # ----- Step 1: random initialize everything -----\n",
+        "    pos = np.random.uniform(-1, 1, size=(num_steps, num_acids, 3))\n",
+        "    ang = np.random.uniform(-180, 180, size=(num_steps, num_acids, 2))\n",
+        "\n",
+        "    # helper: map acid → index\n",
+        "    idx = {a: i for i, a in enumerate(amino_acids)}\n",
+        "\n",
+        "    # ----- Step 2: apply chosen version -----\n",
+        "    for t in range(num_steps - 1):\n",
+        "        for Ai, Aj in pairs:\n",
+        "            i = idx[Ai]\n",
+        "            j = idx[Aj]\n",
+        "\n",
+        "            Ai_pos = pos[t, i]\n",
+        "            Ai_ang = ang[t, i]\n",
+        "            Aj_pos_prev = pos[t, j]\n",
+        "            Aj_ang_prev = ang[t, j]\n",
+        "\n",
+        "            if version == \"v1\":\n",
+        "                # copy previous\n",
+        "                pos[t+1, j] = Aj_pos_prev.copy()\n",
+        "                ang[t+1, j] = Aj_ang_prev.copy()\n",
+        "                # update\n",
+        "                pos[t+1, j] += Aj_pos_prev * np.sin(Ai_pos)\n",
+        "                ang[t+1, j] -= Ai_ang\n",
+        "\n",
+        "            elif version == \"v2\":\n",
+        "                # angles copy only\n",
+        "                ang[t+1, j] = Aj_ang_prev.copy()\n",
+        "                # update\n",
+        "                pos[t+1, j] = Aj_pos_prev * np.sin(Ai_pos)\n",
+        "                ang[t+1, j] -= Ai_ang\n",
+        "\n",
+        "            elif version == \"v3\":\n",
+        "                # copy previous\n",
+        "                pos[t+1, j] = Aj_pos_prev.copy()\n",
+        "                ang[t+1, j] = Aj_ang_prev.copy()\n",
+        "                # update\n",
+        "                pos[t+1, j] += np.sin(Ai_pos)\n",
+        "                ang[t+1, j] -= Ai_ang\n",
+        "\n",
+        "            else:\n",
+        "                raise ValueError(\"version must be 'v1', 'v2', or 'v3'\")\n",
+        "\n",
+        "    return pos, ang\n"
+      ],
+      "metadata": {
+        "id": "eo0dGK-XQTkN"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p, a = syn_data(\"v2\")\n",
+        "p"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JFNmc9ZmQnpD",
+        "outputId": "c77a5ca9-86f5-422c-b956-1d9c8e9c8c20"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[-2.50919762e-01,  9.01428613e-01,  4.63987884e-01],\n",
+              "        [ 1.97316968e-01, -6.87962719e-01, -6.88010959e-01],\n",
+              "        [-8.83832776e-01,  7.32352292e-01,  2.02230023e-01],\n",
+              "        ...,\n",
+              "        [-4.96435408e-01, -5.50298822e-03, -3.98243380e-01],\n",
+              "        [-4.30319011e-01, -9.26226105e-01,  2.19128668e-01],\n",
+              "        [ 5.35804646e-03, -8.97042498e-01, -4.42707072e-01]],\n",
+              "\n",
+              "       [[ 8.16531772e-01, -5.20876219e-01, -7.10210256e-01],\n",
+              "        [-2.10944794e-02,  9.71300908e-01, -5.15889457e-01],\n",
+              "        [ 3.44271095e-01,  5.23239231e-01, -5.24724912e-01],\n",
+              "        ...,\n",
+              "        [-9.25303623e-01,  6.45201121e-01, -2.79618717e-01],\n",
+              "        [-7.45878975e-01,  4.44865201e-02,  5.39987106e-01],\n",
+              "        [-2.57543779e-03,  1.59921191e-01, -2.16545275e-01]],\n",
+              "\n",
+              "       [[-8.96636558e-01,  6.27092631e-02,  8.12702432e-02],\n",
+              "        [ 2.74859803e-01,  4.52182667e-01,  9.51704159e-01],\n",
+              "        [ 3.26006966e-02, -3.54087054e-01,  5.90372390e-01],\n",
+              "        ...,\n",
+              "        [ 9.73279157e-01, -2.51458408e-01, -2.58715706e-01],\n",
+              "        [ 6.25599135e-01,  8.94497155e-01,  9.72002128e-01],\n",
+              "        [ 3.49725121e-04, -1.99919896e-02,  6.14633491e-03]],\n",
+              "\n",
+              "       ...,\n",
+              "\n",
+              "       [[-3.02358932e-01, -7.78003802e-01,  6.16470420e-01],\n",
+              "        [ 8.95376052e-01, -8.55367049e-01,  9.10230415e-01],\n",
+              "        [ 4.51531987e-02, -4.00868644e-01, -8.46275849e-01],\n",
+              "        ...,\n",
+              "        [ 1.90263350e-01, -9.80152358e-01, -7.18096811e-02],\n",
+              "        [ 9.26998482e-01,  3.80645603e-02,  3.55084535e-01],\n",
+              "        [-0.00000000e+00, -0.00000000e+00,  0.00000000e+00]],\n",
+              "\n",
+              "       [[ 4.25920953e-02,  9.52027647e-01, -7.48899570e-01],\n",
+              "        [-9.66104670e-01,  5.40316424e-01,  6.14311075e-01],\n",
+              "        [-7.59585542e-01, -4.68834334e-01, -9.64895273e-01],\n",
+              "        ...,\n",
+              "        [ 5.08529947e-01,  8.36852864e-01,  9.01857189e-01],\n",
+              "        [ 1.54245172e-01, -2.85757681e-01,  5.75098172e-01],\n",
+              "        [ 0.00000000e+00, -0.00000000e+00,  0.00000000e+00]],\n",
+              "\n",
+              "       [[ 3.13262147e-01, -5.19202174e-01, -6.16814109e-01],\n",
+              "        [ 8.36478173e-01, -7.96392634e-01,  1.19158155e-02],\n",
+              "        [-5.58294434e-01, -9.22140073e-01, -9.27962363e-01],\n",
+              "        ...,\n",
+              "        [ 6.00006964e-01,  1.05414151e-01, -2.06892636e-01],\n",
+              "        [-7.36569943e-01,  7.30591518e-01, -6.85453584e-01],\n",
+              "        [-0.00000000e+00,  0.00000000e+00, -0.00000000e+00]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TvTdtAfVQooA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -69,7 +286,19 @@
         "        angles = np.random.uniform(-180, 180, size=2)\n",
         "        data.at[t, a] = {\"pos\": pos, \"angles\": angles}\n",
         "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "T4LaJMyFba1I"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ----- Step 2: Overwrite dependent amino acids using the rules -----\n",
+        "# ----- v1\n",
         "for t in range(num_steps - 1):\n",
         "    for Ai, Aj in pairs:\n",
         "        Ai_prev = data.at[t, Ai]\n",
@@ -83,12 +312,64 @@
         "\n",
         "        # step 2: apply update rule\n",
         "        Aj_next[\"pos\"] += Aj_prev[\"pos\"] * np.sin(Ai_prev[\"pos\"])\n",
-        "        Aj_next[\"angles\"] -= Ai_prev[\"angles\"]\n"
+        "        Aj_next[\"angles\"] -= Ai_prev[\"angles\"]"
       ],
       "metadata": {
-        "id": "T4LaJMyFba1I"
+        "id": "SZSMdR7rIcqv"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ----- Step 2: Overwrite dependent amino acids using the rules -----\n",
+        "# ----- v2\n",
+        "for t in range(num_steps - 1):\n",
+        "    for Ai, Aj in pairs:\n",
+        "        Ai_prev = data.at[t, Ai]\n",
+        "        Aj_prev = data.at[t, Aj]\n",
+        "        Aj_next = data.at[t+1, Aj]\n",
+        "\n",
+        "        # overwrite only Aj (the target)\n",
+        "        # step 1: copy previous values\n",
+        "        # Aj_next[\"pos\"] = Aj_prev[\"pos\"].copy()\n",
+        "        Aj_next[\"angles\"] = Aj_prev[\"angles\"].copy()\n",
+        "\n",
+        "        # step 2: apply update rule\n",
+        "        Aj_next[\"pos\"] = Aj_prev[\"pos\"] * np.sin(Ai_prev[\"pos\"])\n",
+        "        Aj_next[\"angles\"] -= Ai_prev[\"angles\"]"
+      ],
+      "metadata": {
+        "id": "iO-glrIUIi6T"
       },
       "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ----- Step 2: Overwrite dependent amino acids using the rules -----\n",
+        "# ----- v3\n",
+        "for t in range(num_steps - 1):\n",
+        "    for Ai, Aj in pairs:\n",
+        "        Ai_prev = data.at[t, Ai]\n",
+        "        Aj_prev = data.at[t, Aj]\n",
+        "        Aj_next = data.at[t+1, Aj]\n",
+        "\n",
+        "        # overwrite only Aj (the target)\n",
+        "        # step 1: copy previous values\n",
+        "        Aj_next[\"pos\"] = Aj_prev[\"pos\"].copy()\n",
+        "        Aj_next[\"angles\"] = Aj_prev[\"angles\"].copy()\n",
+        "\n",
+        "        # step 2: apply update rule\n",
+        "        Aj_next[\"pos\"] += np.sin(Ai_prev[\"pos\"])\n",
+        "        Aj_next[\"angles\"] -= Ai_prev[\"angles\"]"
+      ],
+      "metadata": {
+        "id": "z5_mvFucIjFI"
+      },
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -103,9 +384,9 @@
           "height": 1000
         },
         "id": "Z3rRn8i_PCCb",
-        "outputId": "824e107c-e52e-4c09-dc0d-a8ee21a11195"
+        "outputId": "6b9d7d57-145c-4d29-d212-e0b7714082aa"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +836,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0076e405-973f-49aa-80e9-167cf8e2c0cb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fd7331ba-f7cb-47c6-883a-1cb346c8d272\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1085,7 +1366,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0076e405-973f-49aa-80e9-167cf8e2c0cb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd7331ba-f7cb-47c6-883a-1cb346c8d272')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1137,12 +1418,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0076e405-973f-49aa-80e9-167cf8e2c0cb button.colab-df-convert');\n",
+              "        document.querySelector('#df-fd7331ba-f7cb-47c6-883a-1cb346c8d272 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0076e405-973f-49aa-80e9-167cf8e2c0cb');\n",
+              "        const element = document.querySelector('#df-fd7331ba-f7cb-47c6-883a-1cb346c8d272');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1162,8 +1443,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3b4d9d60-5c39-4fe6-9241-894cbe33fb16\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3b4d9d60-5c39-4fe6-9241-894cbe33fb16')\"\n",
+              "    <div id=\"df-6a942ed2-5178-4351-b6f5-7ca2a2cedbab\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6a942ed2-5178-4351-b6f5-7ca2a2cedbab')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1282,14 +1563,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3b4d9d60-5c39-4fe6-9241-894cbe33fb16 button');\n",
+              "            document.querySelector('#df-6a942ed2-5178-4351-b6f5-7ca2a2cedbab button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_c3ec1bb3-ff45-44fa-8954-c902814a2ece\">\n",
+              "  <div id=\"id_3ef21880-dc3d-4591-a045-9b8f3d0a23a5\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1333,7 +1614,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_c3ec1bb3-ff45-44fa-8954-c902814a2ece button.colab-df-generate');\n",
+              "        document.querySelector('#id_3ef21880-dc3d-4591-a045-9b8f3d0a23a5 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1353,7 +1634,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
